--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway|Roboto&amp;display=swap" rel="stylesheet">
 
   <title>Shivam Kumar - Homepage</title>
-  <link rel="icon" href="image/icon200x200.png" type="image/x-icon">
+  <link rel="icon" href="icon200x200.png" type="image/x-icon">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 	
       <a class="navbar-brand" href="#">
         
-		<img src="https://instagram.fpat2-2.fna.fbcdn.net/v/t51.2885-19/s320x320/30590521_1682805361799142_7027898155161092096_n.jpg?_nc_ht=instagram.fpat2-2.fna.fbcdn.net&_nc_ohc=q9nCrkaOVXYAX9faMrL&tp=1&oh=18a03640f8266ea7e89079c13e318f4c&oe=5FF239D5" width="60" height="60" alt="" style="border-radius : 50%">
+		<img src="sample.png" width="60" height="60" alt="" style="border-radius : 50%">
         
 		<p class="navbar-title">Shivam Kumar</p>
       </a>
@@ -87,7 +87,7 @@
         </div>
 
         <div class="img-div col-lg-6">
-          <img class="home-img" src="image/homeimage.svg" alt="">
+          <img class="home-img" src="homeimage.svg" alt="">
           <div class="links">
             <p class="home-sectitle">Social Profile</p>
 
