--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	
       <a class="navbar-brand" href="#">
         
-		<img src="sample.png" width="60" height="60" alt="" style="border-radius : 50%">
+		<img src="sample.jpg" width="60" height="60" alt="" style="border-radius : 50%">
         
 		<p class="navbar-title">Shivam Kumar</p>
       </a>
