--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
-<html lang="en" dir="ltr"><head>
+<html lang="en" dir="ltr">
+  <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<!-- Primary Meta Tags -->
+	<title>Shivam Kumar - Homepage</title>
+	<meta name="title" content="Shivam Kumar - Homepage">
+	<meta name="description" content="Shivam Kumar, student at IISER-Kolkata.">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://happybravo.github.io/ShivamKr/">
+	<meta property="og:title" content="Shivam Kumar - Homepage">
+	<meta property="og:description" content="Shivam Kumar, student at IISER-Kolkata.">
+	<meta property="og:image" content="">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://happybravo.github.io/ShivamKr/">
+	<meta property="twitter:title" content="Shivam Kumar - Homepage">
+	<meta property="twitter:description" content="Shivam Kumar, student at IISER-Kolkata.">
+	<meta property="twitter:image" content="">
 
   <!-- css -->
   <link rel="stylesheet" href="main.css">
@@ -16,7 +36,8 @@
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway|Roboto&amp;display=swap" rel="stylesheet">
 
-  <title>Shivam Kumar - Homepage</title>
+  <!--<title>Shivam Kumar - Homepage</title>-->
+  
   <link rel="icon" href="icon200x200.png" type="image/x-icon">
 </head>
 
