--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="col-lg-6">
           <h1 class="home-name">About Me</h1>
           <div class="home-dsc">
-            <p>Hi, I am Shivam Kumar. I'm a 2nd year student at IISER Kolkata.</p>
+            <p>Hi, I am Shivam Kumar. I'm a 3rd year student at IISER Kolkata.</p>
             <p>I'm eager to learn and explore new fields of science and technology. I have good listening skills and fast-learning abilities. Being an undergraduate, I believe that I can come up with fresh ideas and bring a new perspective to
               the table.</p>
             <p>Connect with me on <a target="_blank" href="https://www.linkedin.com/in/happy-bravo-55328b1b3/">LinkedIn</a></p>
