--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a target="_blank" class="home-icons" href="https://www.facebook.com/happy.bravo.9/">
               <i class="fab fa-facebook" aria-hidden="true"></i>
 
-            </a><a target="_blank" class="home-icons" href="https://www.instagram.com/i_m_happiee/">
+            </a><a target="_blank" class="home-icons" href="https://www.instagram.com/i_turned_19/">
               <i class="fab fa-instagram" aria-hidden="true"></i>
             </a>
            
