--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p>Hi, I am Shivam Kumar. I'm a 3rd year student at IISER Kolkata.</p>
             <p>I'm eager to learn and explore new fields of science and technology. I have good listening skills and fast-learning abilities. Being an undergraduate, I believe that I can come up with fresh ideas and bring a new perspective to
               the table.</p>
-            <p>Connect with me on <a target="_blank" href="https://www.linkedin.com/in/happy-bravo-55328b1b3/">LinkedIn</a></p>
+            <!-- <p>Connect with me on <a target="_blank" href="https://www.linkedin.com/in/happy-bravo-55328b1b3/">LinkedIn</a></p> -->
             <p class="home-sectitle">My Interests</p>
             <ul>
               <li>Experimenting new ideas</li>
